# parameterizable

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  contributing.md  docstrings_comments.md  pyproject.toml  readthedocs.md  setup.py  type_hints.md  unit_tests.md
.github/workflows/: ruff.yml  unit-tests.yml  update-stats.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: mixinforge.rst  modules.rst  parameterizable.rst
parameterizable/: __init__.py  parameterizable.py
parameterizable/tests/: fixtures.py  test_advanced_types.py  test_basic.py  test_deep_nesting.py  test_errors.py  test_inheritance.py  test_nesting.py  test_overrides.py  test_parameterizable.py  test_registration.py  test_types.py
src/mixinforge/: __init__.py  _cli_entry_points.py  _version_info.py  atomics_detector.py  basic_file_utils.py  cacheable_properties_mixin.py  dict_sorter.py  iterative_flattener.py  json_processor.py  nested_collection_flattener.py  nested_collections_processor.py  not_picklable.py  parameterizable.py  parameterizable_mixin.py  project_analyzer.py  pyproject_utils.py  single_thread_enforcer.py  single_thread_enforcer_mixin.py  singleton_mixin.py
src/mixinforge/command_line_tools/: __init__.py  _cli_entry_points.py  basic_file_utils.py  project_analyzer.py
src/mixinforge/context_managers/: __init__.py  output_capturer.py  output_suppressor.py
src/mixinforge/mixins_and_metaclasses/: __init__.py  guarded_init_metaclass.py  immutable_mixin.py  immutable_parameterizable_mixin.py  not_picklable_mixin.py  parameterizable_mixin.py  single_thread_enforcer_mixin.py  singleton_mixin.py
src/mixinforge/utility_functions/: __init__.py  atomics_detector.py  dict_sorter.py  json_processor.py  nested_collections_inspector.py  nested_collections_processor.py  notebook_checker.py  (+1 more)
src/parameterizable/: __init__.py  dict_sorter.py  json_processor.py  not_picklable.py  parameterizable.py
tests/: demo_types.py  fixtures.py  test_access_jsparams.py  test_advanced_types.py  test_basic.py  test_cacheable_properties_mixin_core.py  test_cacheable_properties_mixin_get_single.py  test_cacheable_properties_mixin_get_status.py  test_cacheable_properties_mixin_set.py  test_circular_references.py  test_complex_nesting.py  test_deep_nesting.py  test_dict_sorter.py  test_errors.py  test_extract_params_dict.py  test_guarded_init_metaclass.py  test_inheritance.py  test_json_processor.py  test_json_processor_cover_slots_branch.py  test_json_processor_extra.py  test_json_processor_remaining_branches.py  test_json_processor_round_trips.py  test_json_processor_slots_paths.py  test_json_processor_slots_tuple_variants.py  test_nesting.py  test_not_picklable.py  test_overrides.py  test_parameterizable.py  test_parameterizable_essential_auxiliary.py  test_parameterizable_methods.py  test_registration.py  test_single_thread_enforcer.py  test_singleton_mixin.py  test_types.py  test_update_jsparams.py  test_update_jsparams_plain_dict.py  test_version.py  test_version_fallback.py
tests/__ci_cd__/: update_stats_live.py
tests/__live_actions__/: clean_dist_live_action.py  clear_cache_live_action.py  update_stats_live_action.py
tests/cacheable_properties/: test_cacheable_properties_mixin_get_all.py  test_cacheable_properties_mixin_wrapping.py
tests/cli/: test_cli_entry_points.py
tests/command_line_tools/: test_basic_file_utils.py  test_basic_file_utils_categorization.py  test_basic_file_utils_dist.py  test_basic_file_utils_edge_cases.py  test_project_analyzer_data_classes.py  test_project_analyzer_error_handling.py  test_project_analyzer_file_analysis.py  test_project_analyzer_path_validation.py  test_project_analyzer_project_analysis.py  test_project_analyzer_verbose_mode.py
tests/context_managers/: test_output_capturer.py  test_output_suppressor.py
tests/json_processor/: test_json_processor.py  test_json_processor_cover_slots_branch.py  test_json_processor_extra.py  test_json_processor_slots_paths.py
tests/jsparams/: test_access_jsparams.py
tests/metaclass/: test_guarded_init_metaclass_helpers.py
tests/mixins/: test_single_thread_enforcer.py
tests/parameterizable/: test_parameterizable.py  test_parameterizable_essential_auxiliary.py
tests/utility_functions/: test_atomics_detector.py  test_dict_sorter.py  test_find_atomics.py  test_find_nonatomics.py  test_notebook_checker.py  test_transform_instances.py  test_transform_instances_coverage.py  test_transform_instances_dedup.py  test_transform_instances_defaultdict.py  test_transform_instances_edge_cases.py  test_transform_instances_extra.py  test_traversal_logic.py  test_traversal_performance.py
tests/utils/: test_atomics_detector.py  test_basic_file_utils.py  test_find_atomics.py  test_find_nonatomics.py  test_nested_collections_processor.py  test_project_analyzer_data_classes.py  test_project_analyzer_file_analysis.py  test_project_analyzer_path_validation.py  test_project_analyzer_project_analysis.py  test_pyproject_utils.py  test_traversal_logic.py
tests/version/: test_version.py  test_version_fallback.py
(+35 files in other folders)
