[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parameterizable"
version = "0.104.3"
description = "Library for work with parameterizable classes."
readme = "README.md"
requires-python = ">=3.11"

license = {text = "MIT"}

authors = [
    {name = "Vlad (Volodymyr) Pavlov", email = "vlpavlov@ieee.org"}
]
keywords = ["parameters"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
]

[project.optional-dependencies]

docs = [
    "sphinx",
    "pydata_sphinx_theme"
]

dev = [
    "pytest",
    "coverage",
    "sphinx",
    "pydata_sphinx_theme"
]


[project.urls]
Home = "https://github.com/pythagoras-dev/parameterizable"
Docs = "https://parameterizable.readthedocs.io/"
