[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixinforge"
version = "0.207.1"
description = "Library for work with various useful mixins and utility classes."
readme = "README.md"
requires-python = ">=3.11"

license = {text = "MIT"}

authors = [
    {name = "Vlad (Volodymyr) Pavlov", email = "vlpavlov@ieee.org"}
]
keywords = ["parameters", "mixins", "utilities", "python"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "tabulate",
]

[project.optional-dependencies]

docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "myst-parser"
]

dev = [
    "pytest",
    "coverage",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "myst-parser"
]


[project.scripts]
mf-stats = "mixinforge._cli_entry_points:mf_stats"
mf-clean-cache = "mixinforge._cli_entry_points:mf_clean_cache"

[project.urls]
Home = "https://github.com/pythagoras-dev/mixinforge"
Docs = "https://mixinforge.readthedocs.io/"

[tool.pytest.ini_options]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on config issues
    "--showlocals",           # Show local variables in tracebacks
    "--verbose",              # Verbose output
    "--cache-clear",          # Clear cache before each run
]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/mixinforge"]
branch = true
